--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/analytics": "^1.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -13,6 +14,9 @@
     "swiper": "^11.1.15",
     "tailwindcss": "^3.4.15",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "typescript": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
